syntax = "proto3";

package rest;

option go_package = ".;rest";

// 群组信息
message GroupInfo {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string avatar = 4;
  int64 owner_id = 5;
  int32 member_count = 6;
  int32 max_members = 7;
  bool is_public = 8;
  string announcement = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}

// 群成员信息
message GroupMemberInfo {
  int64 user_id = 1;
  int64 group_id = 2;
  string role = 3; // owner, admin, member
  string nickname = 4;
  int64 joined_at = 5;
}

// 创建群组请求
message CreateGroupRequest {
  string name = 1;
  string description = 2;
  string avatar = 3;
  int64 owner_id = 4;
  bool is_public = 5;
  int32 max_members = 6;
  repeated int64 member_ids = 7;
}

// 创建群组响应
message CreateGroupResponse {
  bool success = 1;
  string message = 2;
  GroupInfo group = 3;
}

// 搜索群组请求
message SearchGroupRequest {
  string keyword = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 搜索群组响应
message SearchGroupResponse {
  bool success = 1;
  string message = 2;
  repeated GroupInfo groups = 3;
  int32 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 获取群组信息请求
message GetGroupInfoRequest {
  int64 group_id = 1;
  int64 user_id = 2;
}

// 获取群组信息响应
message GetGroupInfoResponse {
  bool success = 1;
  string message = 2;
  GroupInfo group = 3;
  repeated GroupMemberInfo members = 4;
}

// 解散群组请求
message DisbandGroupRequest {
  int64 group_id = 1;
  int64 user_id = 2;
}

// 解散群组响应
message DisbandGroupResponse {
  bool success = 1;
  string message = 2;
}

// 加入群组请求
message JoinGroupRequest {
  int64 group_id = 1;
  int64 user_id = 2;
  string reason = 3;
}

// 加入群组响应
message JoinGroupResponse {
  bool success = 1;
  string message = 2;
}

// 退出群组请求
message LeaveGroupRequest {
  int64 group_id = 1;
  int64 user_id = 2;
}

// 退出群组响应
message LeaveGroupResponse {
  bool success = 1;
  string message = 2;
}

// 踢出成员请求
message KickMemberRequest {
  int64 group_id = 1;
  int64 operator_id = 2;
  int64 target_user_id = 3;
  string reason = 4;
}

// 踢出成员响应
message KickMemberResponse {
  bool success = 1;
  string message = 2;
}

// 邀请加入群组请求
message InviteToGroupRequest {
  int64 group_id = 1;
  int64 inviter_id = 2;
  int64 user_id = 3;
}

// 邀请加入群组响应
message InviteToGroupResponse {
  bool success = 1;
  string message = 2;
}

// 发布群公告请求
message PublishAnnouncementRequest {
  int64 group_id = 1;
  int64 user_id = 2;
  string content = 3;
}

// 发布群公告响应
message PublishAnnouncementResponse {
  bool success = 1;
  string message = 2;
}

// 获取用户群组列表请求
message GetUserGroupsRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取用户群组列表响应
message GetUserGroupsResponse {
  bool success = 1;
  string message = 2;
  repeated GroupInfo groups = 3;
  int32 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}